###################################################################################
#
# CDMlib - Cartesian Data Management library
#
# Copyright (c) 2013-2017 Advanced Institute for Computational Science (AICS), RIKEN.
# All rights reserved.
#
# Copyright (c) 2016-2017 Research Institute for Information Technology (RIIT), Kyushu University.
# All rights reserved.
#
###################################################################################

# Install files

install(FILES  cdmlib_ug_en.pdf
               cdmlib_ug_jp.pdf
               reference.pdf
               fconv_reference.pdf
        DESTINATION doc)
