#########################################################################
#
# CDMlib - Cartesian Data Management library
#
# Copyright (c) 2013-2015 Advanced Institute for Computational Science, RIKEN. 
# All rights reserved.
#
#########################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_srcdir)/doc/cdmlib_ug_jp.pdf \
    $(top_srcdir)/doc/cdmlib_ug_en.pdf \
    $(top_srcdir)/doc/reference.pdf \
    $(top_srcdir)/doc/fconv_reference.pdf

#dist_data_DATA = doxygen/Doxyfile doxygen/makepdf.sh 
